[package]
name = "cron_cal"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
chrono = "0.4"
clap = { version = "3.1", features = ["cargo", "derive"] }
cron = "0.10"
