[package]
name = "cron_cal"
version = "0.1.0"
description = "CLI to calculate cron schedules"
repository = "https://github.com/thekuwayama/cron_cal"
documentation = "https://docs.rs/cron_cal"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
chrono = "0.4"
clap = { version = "3.1", features = ["cargo", "derive"] }
cron = "0.10"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
