[package]
name = "cron_cal_wasm"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "cron calender wasm"
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
cron_cal = { path = "../cron_cal", version = "0.1" }
js-sys = "0.3"
wasm-bindgen = "0.2"
