[package]
name = "cron_cal_wasm"
version = "0.1.0"
description = "wasm to calculate cron schedules"
repository = "https://github.com/thekuwayama/cron_cal"
documentation = "https://docs.rs/cron_cal"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
cron_cal = { path = "../cron_cal", version = "0.1" }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
